# boost-mpi-matr

./: CMakeLists.txt  conanfile.py  main-mpi.cpp  main-openmp.cpp  main.cpp  meson.build  multi-run.sh  random_matrix.hpp  readme.md
example/: fit.py  times-openmp.txt  times.txt
